package com.mk.reggie.service;

import com.baomidou.mybatisplus.extension.service.IService;
import com.mk.reggie.entity.User;

public interface IUserService extends IService<User> {
}
